k8s/overlays/prod/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrappedup-backend
spec:
  template:
    spec:
      containers:
        - name: wrappedup-backend
          image: ghcr.io/guillermorivero/wrappedup-backend:prod
